# md-tauri

./: index.html  package-lock.json  package.json
.github/workflows/: md-tauri-release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
